<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg" >
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
	    android:orientation="vertical" >    	
    	<Button
    	    android:id="@+id/buttonfacebook"
    	    android:layout_width="280dip"
    	    android:layout_height="47dip"
    	    android:layout_gravity="center_horizontal"
    	    android:layout_marginTop="70dip"
    	    android:background="@drawable/button_facebook_278x44" />
    	
    	<TextView
    	    android:id="@+id/add_point_message"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:layout_marginBottom="10dip"
    	    android:layout_marginTop="10dip"
    	    android:padding="10dip"
    	    android:text="@string/OR"
    	    android:textColor="@color/white"
    	    android:textSize="16sp" />

    	<EditText
    	    android:id="@+id/username"
    	    android:layout_width="280dip"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:hint="@string/user"
    	    android:inputType="text" >

    	    <requestFocus />
    	</EditText>
    	
    	<EditText
    	    android:id="@+id/email"
    	    android:layout_width="280dip"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:hint="@string/email"
    	    android:inputType="textEmailAddress" />
    	
    	<EditText
    	    android:id="@+id/password"
    	    android:layout_width="280dip"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:hint="@string/pass"
    	    android:inputType="textPassword" />

    	<Button
    	    android:id="@+id/buttonRegister"
    	    android:layout_width="162dip"
    	    android:layout_height="42dip"
    	    android:layout_gravity="center_horizontal"
    	    android:layout_marginTop="20dip"
    	    android:background="@drawable/button_register" />
    	
    </LinearLayout>
    <RelativeLayout
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content">

     	<Button
     	    android:id="@+id/closebutton"
     	    android:layout_width="43dip"
     	    android:layout_height="44dip"
     	    android:layout_alignParentRight="true"
     	    android:layout_alignParentTop="true"
     	    android:layout_marginTop="5dp"
     	    android:layout_marginRight="5dp"
     	    android:background="@drawable/icon_close" />
 
    </RelativeLayout>    
</FrameLayout>